updated make file

--- a/Project1/Makefile
+++ b/Project1/Makefile
@@ -4,7 +4,6 @@ CC=gcc
 # compiler flags for main program (release)
 CFLAGS=-Wall \
        -Wextra \
-       -pthread \
        -O2 \
 
 # compiler flags for main program (debug)
@@ -28,10 +27,10 @@ debug: prefix_tree_dbg
 release: prefix_tree
 
 prefix_tree: src/main.c src/tree.c $(IFILES)
-	$(CC) $(CFLAGS) -I$(IDIR) $(CFILES) src/main.c src/tree.c -o bin/release/prefix_tree 2> build/release/tree_compile.log
+	$(CC) $(CFLAGS) -I$(IDIR) src/main.c src/tree.c -o bin/release/prefix_tree 2> build/release/tree_compile.log
 
 prefix_tree_dbg: src/main.c src/tree.c $(IFILES)
-	$(CC) $(CFLAGSDBG_1) -I$(IDIR) $(CFILES) src/main.c src/tree.c -o bin/debug/prefix_tree_dbg 2> build/debug/tree_compile_dbg.log
+	$(CC) $(CFLAGSDBG) -I$(IDIR) src/main.c src/tree.c -o bin/debug/prefix_tree_dbg 2> build/debug/tree_compile_dbg.log
 
 
 .PHONY: clean
