--- a/Project2/Makefile
+++ b/Project2/Makefile
@@ -10,6 +10,7 @@ CFLAGS = -Wall \
 CFLAGSDBG_1 = -Wall \
               -Wextra \
               -g \
+              -pg \
               -fno-omit-frame-pointer \
               -fsanitize=leak \
               -fsanitize=address \
@@ -19,6 +20,7 @@ CFLAGSDBG_1 = -Wall \
 CFLAGSDBG_2 = -Wall \
               -Wextra \
               -g \
+              -pg \
               -fno-omit-frame-pointer \
 
 CFILES = src/*
@@ -35,7 +37,7 @@ EXEC_NAME_DBG_1 = inter_domain_routing_dbg_1
 EXEC_NAME_DBG_2 = inter_domain_routing_dbg_2
 
 # default test file
-DEFAULT_TEST_FILE = test_files/MediumNetwork.txt
+DEFAULT_TEST_FILE = test_files/LargeNetwork.txt
 
 run: all
 	@echo "\n>>>>>>>>>> EXECUTING RELEASE TARGET. EXECUTION COMMAND:"
